--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/server.js",
     "start": "node ./dist/server.js",
+    "lint": "eslint src/js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "mongoose": "^6.6.2"
   },
   "devDependencies": {
+    "eslint": "^8.24.0",
     "morgan": "^1.10.0"
   },
   "type": "commonjs"
