--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGO_PATH=mongodb+srv://thanhnhile:FFLst5ySMjbAGyr1@cluster0.r0veury.mongodb.net/?retryWrites=true&w=majority
 MONGO_USER=thanhnhile
-MONGO_PASSWORD=FFLst5ySMjbAGyr1
+MONGO_PASSWORD=bYdLPCvQVM4x5XVr
+MONGO_DB=CNPMM
 JWT_SECRET=
