--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ NODE_ENV=development
 PORT=5000
 MONGO_PATH=mongodb+srv://thanhnhile:FFLst5ySMjbAGyr1@cluster0.r0veury.mongodb.net/?retryWrites=true&w=majority
 MONGO_USER=thanhnhile
-MONGO_PASSWORD=FFLst5ySMjbAGyr1
-JWT_SECRET=
+MONGO_PASSWORD=bYdLPCvQVM4x5XVr
+MONGO_DB=CNPMM
+ACCESS_TOKEN_SECRET=vGreVRA4YLvUHTCjVUQ3RSnM
+REFRESH_TOKEN_SECRET=2WdwtuqmduqdcbcSExPFpMzN
