--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "start": "node ./dist/server.js",
+    "start": "node ./src/server.js",
     "lint": "eslint src/js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
